# api

./: .gitignore  Cargo.toml  README.md  build.rs  reviewpad.yml
go/: .gitignore  README.md  Taskfile.yml  genproto.sh  go.mod  go.sum  installdep.sh
go/clients/: codehost.go  diff.go  github_app.go  robin.go  semantic.go
go/codehost/: branch.pb.go  code_host.pb.go  code_review.pb.go  comment.pb.go  comments.pb.go  file.pb.go  label.pb.go  merge.pb.go  milestone.pb.go  pull_request.pb.go  repository.pb.go  team.pb.go  teams.pb.go  user.pb.go
go/entities/: branch.pb.go  code_host.pb.go  code_review.pb.go  comments.pb.go  commit_file.pb.go  diff.pb.go  external_user.pb.go  file.pb.go  git_diff.pb.go  git_repo.pb.go  label.pb.go  language.pb.go  merge.pb.go  milestone.pb.go  semantic_diff.pb.go  span.pb.go  target_entity.pb.go  teams.pb.go
go/mocks/: hosts.go
go/services/: diff.pb.go  diff_grpc.pb.go  host.pb.go  host_grpc.pb.go  hosts.pb.go  hosts_grpc.pb.go  robin.pb.go  robin_grpc.pb.go  semantic.pb.go  semantic_grpc.pb.go
go/services_mocks/: host_service.go  hosts_service.go  robin_service.go  semantic_service.go
pb/codehost/: branch.proto  code_host.proto  code_review.proto  comments.proto  file.proto  label.proto  merge.proto  milestone.proto  pull_request.proto  repository.proto  team.proto  user.proto
pb/entities/: branch.proto  code_host.proto  code_review.proto  comments.proto  commit_file.proto  diff.proto  external_user.proto  file.proto  git_diff.proto  git_repo.proto  label.proto  language.proto  merge.proto  milestone.proto  (+4 more)
src/: lib.rs
(+5 files in other folders)
