[package]
name = "api"
version = "0.1.0"
authors = ["marcelosousa <601882+marcelosousa@users.noreply.github.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.6.1"
tonic = {version="0.2.0",features = ["tls"]}

[build-dependencies]
tonic-build = "0.2.0"