[package]
name = "api"
version = "0.1.0"
authors = ["marcelosousa <601882+marcelosousa@users.noreply.github.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.14.3"
tonic = {version="0.14.5",features = ["tls-ring", "tls-native-roots"]}
tonic-prost = "0.14.5"

[build-dependencies]
tonic-build = "0.14.5"
tonic-prost-build = "0.14.5"